Bluewolf SFMTA/src/objects/Appointment__c.object
<CustomObject>
    <description>Lists all the Hearing time slots for Contesting a Tow.</description>
    <fields>
        <fullName>CASE_ID_LU__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LU Case ID ON Schedule Object</label>
        <referenceTo>Scheduled_Appointment_Details__c</referenceTo>
        <relationshipLabel>Appointments</relationshipLabel>
        <relationshipName>Appointments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CaseIDTEST__c</fullName>
        <defaultValue>&quot;CASE_ID_LU__r.Case_Object_Record_ID__c&quot;</defaultValue>
        <description>622 JRH unchecked &quot; Do not allow duplicate values 957
&quot;CASE_ID_LU__r.Case_Object_Record_ID__c&quot;</description>
        <inlineHelpText>&quot;CASE_ID_LU__r.Case_Object_Record_ID__c&quot;  
formula in Default value - deleted for dataload</inlineHelpText>
        <label>CaseIDTEST</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CaseID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case Number</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Appointment</relationshipLabel>
        <relationshipName>Hearings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Hearing_Date__c</fullName>
        <description>Date the Hearing is Scheduled</description>
        <label>Hearing Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hearing_Type__c</fullName>
        <label>Hearing Type</label>
        <picklist>
            <picklistValues>
                <fullName>Web</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In-Person</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mail</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shift__c</fullName>
        <description>When is your Meeting</description>
        <inlineHelpText>When do you wish to book a Appointment?</inlineHelpText>
        <label>Shift</label>
        <picklist>
            <picklistValues>
                <fullName>Morning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Afternoon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Holiday</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <description>Hearing Start Time</description>
        <label>Start Time</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Status</label>
        <type>Checkbox</type>
    </fields>
    <label>Appointment</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CaseID__c</columns>
        <columns>Hearing_Date__c</columns>
        <columns>Shift__c</columns>
        <columns>Start_Time__c</columns>
        <columns>Hearing_Type__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Appointment_Records</fullName>
        <columns>NAME</columns>
        <columns>CaseID__c</columns>
        <columns>Hearing_Date__c</columns>
        <columns>Shift__c</columns>
        <columns>Start_Time__c</columns>
        <columns>Hearing_Type__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Appointment Records</label>
    </listViews>
    <listViews>
        <fullName>Available_Hearing_Times</fullName>
        <columns>NAME</columns>
        <columns>CaseID__c</columns>
        <columns>Hearing_Date__c</columns>
        <columns>Shift__c</columns>
        <columns>Start_Time__c</columns>
        <columns>Hearing_Type__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Hearing_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <label>Available Hearing Times</label>
    </listViews>
    <listViews>
        <fullName>Lookup_for_GoToMeeting_0608_0609</fullName>
        <columns>NAME</columns>
        <columns>Hearing_Date__c</columns>
        <columns>Shift__c</columns>
        <columns>Start_Time__c</columns>
        <columns>CaseIDTEST__c</columns>
        <columns>Status__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Hearing_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>6/13/2017</value>
        </filters>
        <label>Lookup for GoToMeeting 0608 0609</label>
    </listViews>
    <nameField>
        <displayFormat>{MM}/{DD}-{000}</displayFormat>
        <label>Appt Record Ref Index</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Appointments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>